--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index"
+    "dev": "nodemon index"
   },
   "author": "Md Nasirul Islam",
   "license": "ISC",
