--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Generate Images with AI",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-    "start": "node index"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index",
     "dev": "nodemon index"
   },
   "author": "Md Nasirul Islam",
